chore: Signed the application using release key fix: removed display of tags for each photo, app supports only portrait mode now,passing weak reference of context to adapters test: added unit test cases for lifecycle activities, fragments adapter and database

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,5 +44,6 @@
     <string name="getsearcheditorschoicephotos_error">Failed to fetch editors_choice photos for the search string"</string>
     <string name="getsearcheditorschoice_success">"Successfully fetched editors_choice photos for the search string"</string>
     <string name="getsearcheditorschoice_noresponse">No results found, try another search</string>
+    <string name="pixabayurl">https://pixabay.com/</string>
 
 </resources>
